# rksdcardtool

./: .gitignore  CMakeLists.txt  DefineHeader.h  README.md  RKSdcardTool.cpp  Readme.txt  crc.cpp  sdcard_tool.cpp  version.h
tests/: rk356x_otg_bin_512K  rk356x_sdtool_512K  test_conversion.py
